--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         
         <body>
             <h1>20172026 이준성</h1>
-            <h2>    동의대학교 인간시스템디자인학과</h2>
+            <h2>    동의대학교 인간시스템디자인공학과</h2>
             <p>1.데이터분석 : GA로 이용한 데이터기반 의사결정 능력<br>
                2.서비스기획 : 환경분석 및 웹서비스 기획 능력<br>
                3.머신 러닝 : 머신러닝 알고리즘 이해와 빅데이터 분석 능력<br></p>
