--- a/index.html
+++ b/index.html
@@ -1,24 +1,83 @@
 <!DOCTYPE html>
-    <html lang="ko">
-        <head>
-            <meta charset="utf-8">
-            <title>안녕하세요 이준성입니다</title>
-            <link rel="stylesheet" href="practice.css">
-        </head>
-        
-        <body>
-            <h1>20172026 이준성</h1>
-            <h2>    동의대학교 인간시스템디자인공학과</h2>
-            <p>1.데이터분석 : GA로 이용한 데이터기반 의사결정 능력<br>
-               2.서비스기획 : 환경분석 및 웹서비스 기획 능력<br>
-               3.머신 러닝 : 머신러닝 알고리즘 이해와 빅데이터 분석 능력<br></p>
-            <hr>
-            <h3>취미</h3>
-            <p>1.축구<br>
-               2.여행</p>
-               <div class="btn">
-                <a href="magic.html"><button>반갑습니당</button></a>
-               </div>
-            <script src="practice.js"></script>
-        </body>
-    </html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="ga, IT 관련 블로그, UX">
+    <meta name="author" content="Junseong Lee">
+    <link rel="stylesheet" href="index.css">
+    <title>Welcome to Junseong Site</title>
+</head>
+<body>
+    <header>
+        <img src="images/logo.jpg" alt="CI" height="100" width="100">
+        <h1>Junseong Site</h1>
+    </header>
+    <nav>
+        <!-- ul<li*4{메인메뉴$$} -->
+            <ul id="nav">
+                <li>소개</li>
+                <li>쇼핑</li>
+                <li>패키지</li>
+                <li>커뮤니티</li>
+            </ul>
+    </nav>
+    <section>
+        <article>
+            <div class="bigdata">
+                <img src="images/bigdata.jpg" alt="main_img" width="50%">
+            </div>
+            <div class="action">
+                <h2>나의 대외활동 이력</h2>
+                <table class='box' border="1">
+                    <tr>
+                        <th>기간</th>
+                        <th>대외활동내용</th>
+                        <th>주최</th>
+                    </tr>
+                    <tr>
+                        <td>2021.3</td>
+                        <td>마케팅경진대회</td>
+                        <td>정보학회</td>
+                    </tr>
+                    <tr>
+                        <td>2022.5</td>
+                        <td>GA 교육프로그램</td>
+                        <td>동의대학교</td>
+                    </tr>
+                    <tr>
+                        <td>2022.8</td>
+                        <td>온라인쇼핑몰 기획 공모전</td>
+                        <td>중소기업청</td>
+                    </tr>
+                </table>
+            </div>
+        </article>
+        <br><br>
+        <article>
+            <div class="media">
+                <h2>좋아하는 음악</h2>
+                <audio src="media/music01.mp3" controls></audio>
+                <h2>북극곰 환경을 살리자</h2>
+                <video src="media/movie.mp4" controls width="50%"></video>
+                <h2>휘성, 너와 결혼까지 생각했었어..</h2>
+                <iframe width="70%" height="500px" src="https://www.youtube.com/embed/xVU-UUKHYeQ" title="휘성 파이널 라운드 미션곡, '결혼까지 생각했어'♬ - 히든싱어2 9회 [휘성 편]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </article>
+        <article>
+            <div class="gallery">
+                <iframe width="70%" height="400px" src="gallery.html" frameborder="0"></iframe>
+            </div>
+        </article>
+        <aside>
+            <div class="link">
+            <a href="https://hsde.deu.ac.kr/hsde/index.do">동의대학교 인간시스템공학과 사이트</a> <br>
+            <a href="./gallery.html">갤러리</a> <br>
+            <a href=""></a>
+            </div>
+        </aside>
+    </section>
+    <footer>저작권과 주소</footer>
+</body>
+</html>
