--- a/index.html
+++ b/index.html
@@ -10,13 +10,35 @@
 
   gtag('config', 'G-2CP44185NX');
 </script>
+<script src="https://kit.fontawesome.com/a06b65adc9.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="ga, IT 관련 블로그, UX">
     <meta name="author" content="Junseong Lee">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <title>Welcome to Junseong Site</title>
+    <style>
+    body {
+        margin-top: 20px;
+        margin: 0 auto;
+        max-width: 980px;
+    }
+
+    section {
+        display: flex;
+        margin-top: 32px;
+    }
+
+    .content {
+        flex:4;
+    }
+
+    aside {
+        flex:1;
+    }
+    </style>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2CP44185NX"></script>
@@ -30,67 +52,71 @@
 
 <body>
     <header id="home">
-        <img src="images/logo.jpg" alt="CI" height="100" width="100">
+        <!--<img src="images/logo.jpg" alt="CI" height="100" width="100">-->
+        <i class="fa-solid fa-bars"></i>
         <h1>Junseong Site</h1>
     </header>
     <nav>
         <!-- ul<li*4{메인메뉴$$} -->
-        <ul>
-            <li><a href="#">메인메뉴01</a></li>
-            <li><a href="#">메인메뉴02</a></li>
-            <li><a href="#">메인메뉴03</a></li>
-            <li><a href="#">메인메뉴04</a></li>
-        </ul>
+            <ul class="fa-ul">
+                <li><span class="fa-li"><!--<i class="fa-solid fa-check-square">--></i></span>소개</li>
+                <li><span class="fa-li"><!--<i class="fa-solid fa-check-square"></i>--></span>쇼핑</li>
+                <li><span class="fa-li"><!--<i class="fa-solid fa-spinner fa-pulse"></i>--></span>패키지</li>
+                <li><span class="fa-li"><!--<i class="fa-regular fa-square"></i>--></span>커뮤니티</li>
+              </ul>
     </nav>
     <section>
-        <article>
-            <div class="bigdata">
-                <img src="images/bigdata.jpg" alt="main_img" width="50%">
-            </div>
-            <div class="action">
-                <h2>나의 대외활동 이력</h2>
-                <table class='box' border="1">
-                    <tr>
-                        <th>기간</th>
-                        <th>대외활동내용</th>
-                        <th>주최</th>
-                    </tr>
-                    <tr>
-                        <td>2021.3</td>
-                        <td>마케팅경진대회</td>
-                        <td>정보학회</td>
-                    </tr>
-                    <tr>
-                        <td>2022.5</td>
-                        <td>GA 교육프로그램</td>
-                        <td>동의대학교</td>
-                    </tr>
-                    <tr>
-                        <td>2022.8</td>
-                        <td>온라인쇼핑몰 기획 공모전</td>
-                        <td>중소기업청</td>
-                    </tr>
-                </table>
-            </div>
-        </article>
-        <br><br>
-        <article>
-            <div class="media">
-                <h2>좋아하는 음악</h2>
-                <audio src="media/music01.mp3" controls></audio>
-                <h2>북극곰 환경을 살리자</h2>
-                <video src="media/movie.mp4" controls width="50%"></video>
-                <h2>휘성, 너와 결혼까지 생각했었어..</h2>
-                <iframe width="70%" height="500px" src="https://www.youtube.com/embed/xVU-UUKHYeQ" title="휘성 파이널 라운드 미션곡, '결혼까지 생각했어'♬ - 히든싱어2 9회 [휘성 편]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-        </article>
-        <article>
-            <div class="gallery">
-                <iframe width="70%" height="400px" src="gallery.html" frameborder="0"></iframe>
-            </div>
-        </article>
+        <div class="content">
+            <article>
+                <div class="bigdata"> 
+                    <img src="images/bigdata.jpg" class="w3-circle" alt="main_img" width="50%">
+                </div>
+                <div class="action">
+                    <h2>나의 대외활동 이력</h2> <!-- table < tr < td -->
+                    <table class='box' border="1">
+                        <tr class="w3-hover-green">
+                            <th>기간</th>
+                            <th>대외활동내용</th>
+                            <th>주최</th>
+                        </tr>
+                        <tr class="w3-hover-green">
+                            <td>2021.3</td>
+                            <td>마케팅경진대회</td>
+                            <td>정보학회</td>
+                        </tr>
+                        <tr class="w3-hover-green">
+                            <td>2022.5</td>
+                            <td>GA 교육프로그램</td>
+                            <td>동의대학교</td>
+                        </tr>
+                        <tr class="w3-hover-green">
+                            <td>2022.8</td>
+                            <td>온라인쇼핑몰 기획 공모전</td>
+                            <td>중소기업청</td>
+                        </tr>
+                    </table>
+                </div>
+            </article>
+            <br><br>
+            <article>
+                <div class="media">
+                    <h2>좋아하는 음악</h2> <!-- 음악플레이어 -->
+                    <audio src="media/music01.mp3" controls></audio>
+                    <h2>북극곰 환경을 살리자</h2> <!-- 영상링크 -->
+                    <video src="media/movie.mp4" controls width="50%"></video>
+                    <h2>휘성, 너와 결혼까지 생각했었어..</h2> <!-- 유튜브링크 iframe -->
+                    <iframe height="500px" src="https://www.youtube.com/embed/xVU-UUKHYeQ" title="휘성 파이널 라운드 미션곡, '결혼까지 생각했어'♬ - 히든싱어2 9회 [휘성 편]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <!-- width="70%" height="500px" -->
+                </div>
+            </article>
+            <article>
+                <div class="gallery"> <!-- 사진html링크 -->
+                    <iframe width="70%" height="400px" src="gallery.html" frameborder="0"></iframe>
+                </div>
+            </article>
+        </div>
         <aside>
-            <div class="link">
+            <div class="link"> <!-- 상단링크 -->
             <a href="https://hsde.deu.ac.kr/hsde/index.do" target="_blank">동의대학교 인간시스템공학과 사이트</a> <br>
             <a href="./gallery.html">갤러리</a> <br>
             <a href="#home">시작위치</a>
@@ -98,16 +124,21 @@
             <div class="login">
                 <h2>  로그인</h2>
                 <form action="#" method="get" >
-                    회원ID<input type="text" name="id" id=""> <br>
-                    비밀번호 <input type="password" name="pw" id=""> <br>
+                    회원ID<input type="text" class="w3-input" name="id" id=""> <br>
+                    비밀번호 <input type="password" class="w3-input" name="pw" id=""> <br>
                     남자 <input type="radio" name="gender" value="1" id="">
                     여자 <input type="radio" name="gender" value="2" id="">
-                    <input type="submit" value="로그인">
-                    <input type="reset" value="재설정"> <br>
+                    <input type="submit"class="w3-button w3-black"  value="로그인">
+                    <input type="reset" class="w3-button w3-black"  value="재설정"> <br>
                 </form>
             </div>
         </aside>
     </section>
-    <footer>저작권과 주소</footer>
+    <footer>저작권과 주소
+        <div class="sns">
+            <a href="https://www.facebook.com/profile.php?id=100005002200269"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com/jvnnseong/"><i class="fa-brands fa-twitter"></i></a>
+        </div>
+    </footer>
 </body>
 </html>
