--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <!-- ul<li*4{메인메뉴$$} -->
             <ul class="fa-ul">
                 <li><span class="fa-li"><!--<i class="fa-solid fa-check-square">--></i></span>소개</li>
-                <li><span class="fa-li"><!--<i class="fa-solid fa-check-square"></i>--></span>쇼핑</li>
-                <li><span class="fa-li"><!--<i class="fa-solid fa-spinner fa-pulse"></i>--></span>패키지</li>
+                <li><span class="fa-li"><!--<i class="fa-solid fa-check-square"></i>--></span><a href="./shop/default.html">쇼핑</a></li>
+                <li><span class="fa-li"><!--<i class="fa-solid fa-spinner fa-pulse"></i>--></span><a href="./event/event.html">이벤트</a></li>
                 <li><span class="fa-li"><!--<i class="fa-regular fa-square"></i>--></span>커뮤니티</li>
               </ul>
     </nav>
