--- a/computer.html
+++ b/computer.html
@@ -1,6 +1,14 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-PP7R6JD');</script>
+<!-- End Google Tag Manager -->
+    
     <title>Welcome to junseong site</title>
     <script src="https://kit.fontawesome.com/775c063c3d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/mystyle.css">
@@ -47,6 +55,11 @@
     </style>
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PP7R6JD"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+    
   <!--  header+nav+section>article*3+aside^footer -->
   <header id="home"> 
     <i class="fa-sharp fa-solid fa-bars"></i>
