--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- ul<li*4{메인메뉴$$} -->
             <ul class="fa-ul">
                 <li><span class="fa-li"><!--<i class="fa-solid fa-check-square">--></i></span>소개</li>
-                <li><span class="fa-li"><!--<i class="fa-solid fa-check-square"></i>--></span><a href="./shop/default.html">쇼핑</a></li>
+                <li><span class="fa-li"><!--<i class="fa-solid fa-check-square"></i>--></span><a href="./shop/computer.html">쇼핑</a></li>
                 <li><span class="fa-li"><!--<i class="fa-solid fa-spinner fa-pulse"></i>--></span><a href="./event/event.html">이벤트</a></li>
                 <li><span class="fa-li"><!--<i class="fa-regular fa-square"></i>--></span>커뮤니티</li>
               </ul>
