--- a/computer.html
+++ b/computer.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>Welcome to junseong site</title>
@@ -54,6 +54,15 @@
             border: 1px dotted red;
     }
     </style>
+    <script>
+      function cartAdd() {
+        dataLayer.push ({
+          'event' : 'cartAdd',
+          'varcart' : 'computer'  
+        })
+        alert('장바구니에 추가 되었습니다.');
+      }
+    </script>
 </head>
 <body>
 
@@ -85,7 +94,7 @@
             CPU: 인텔 코어i5 3470 (아이비브릿지 3세대) 사용<br />
             가격: 1,200,000원
         </p>
-        <input type="button" value="쇼핑카트에 추가하기" class="cart"/>
+        <input type="button" value="쇼핑카트에 추가하기" class="cart" onclick="cartAdd();"/>
     </div>
     <div class="product2">
         <img src="images/notebook.png" width="100" height="100" />
@@ -95,7 +104,7 @@
             <br />
             가격: 1,200,000원
         </p>
-        <input type="button" value="쇼핑카트에 추가하기" />
+        <input type="button" value="쇼핑카트에 추가하기" onclick="cartAdd();"/>
     </div>
     <div class="product3">
         <img src="images/tshirt.png" width="100" height="100" />
@@ -105,7 +114,7 @@
             <br />
             가격: 1,200,000원
         </p>
-        <input type="button" value="쇼핑카트에 추가하기" />
+        <input type="button" value="쇼핑카트에 추가하기" onclick="cartAdd();" />
     </div>
     <div class="buttonLink">
       <button type="button" id="payment">구매하기</button>
