--- a/index.html
+++ b/index.html
@@ -55,6 +55,28 @@
         flex:1;
     }
     </style>
+
+    <script>
+        function validateForm() {
+        let x = document.forms["userForm"]["id"].value;
+        let y = document.forms["userForm"]["pw"].value;
+        if (x == "") {
+        alert("회원id를 입력");
+        userForm.id.focus();
+        return false;
+        }  
+        else if(y==""){
+        alert("비밀번호 입력");
+        userForm.pw.focus();
+        return false;
+        } else { dataLayer.push({
+            'event' : 'userForm',
+            'formName' : '로그인'
+        })
+            alert("회원가입이 완료되었습니다.")
+        }
+    }
+    </script>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2CP44185NX"></script>
@@ -145,11 +167,11 @@
             </div>
             <div class="login">
                 <h2>  로그인</h2>
-                <form action="#" method="get" >
+                <form action="#" method="get"  name="userForm" onsubmit="validateForm()" >
                     회원ID<input type="text" class="w3-input" name="id" id=""> <br>
                     비밀번호 <input type="password" class="w3-input" name="pw" id=""> <br>
                     남자 <input type="radio" name="gender" value="1" id="">
-                    여자 <input type="radio" name="gender" value="2" id="">
+                    여자 <input type="radio" name="gender" value="2" id=""> <br>
                     <input type="submit"class="w3-button w3-black"  value="로그인">
                     <input type="reset" class="w3-button w3-black"  value="재설정"> <br>
                 </form>
@@ -168,3 +190,4 @@
     <!-- End Google Tag Manager (noscript) -->
 </body>
 </html>
+
