--- a/computer.html
+++ b/computer.html
@@ -60,7 +60,7 @@
           'event' : 'cartAdd',
           'varcart' : 'computer'  
         })
-        alert('장바구니에 추가 되었습니다.');
+        alert("장바구니에 추가 되었습니다.");
       }
     </script>
 </head>
