--- a/computer.html
+++ b/computer.html
@@ -54,7 +54,7 @@
             border: 1px dotted red;
     }
     </style>
-    <script>
+   <!-- <script>
       function cartAdd() {
         dataLayer.push ({
           'event' : 'cartAdd',
@@ -62,7 +62,7 @@
         })
         alert("장바구니에 추가 되었습니다.");
       }
-    </script>
+    </script> -->
 </head>
 <body>
 
@@ -129,6 +129,7 @@
       <i class="fa-brands fa-twitter"></i>
     </div>
   </footer>
+    <script src="./computer.js></script>
   <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PP7R6JD"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
