--- a/computer.html
+++ b/computer.html
@@ -54,7 +54,7 @@
             border: 1px dotted red;
     }
     </style>
-   <!-- <script>
+    <script>
       function cartAdd() {
         dataLayer.push ({
           'event' : 'cartAdd',
@@ -62,7 +62,7 @@
         })
         alert("장바구니에 추가 되었습니다.");
       }
-    </script> -->
+    </script>
 </head>
 <body>
 
