--- a/computer.html
+++ b/computer.html
@@ -59,7 +59,7 @@
         dataLayer.push ({
           'event' : 'cartAdd',
           'varcart' : 'computer'  
-        })
+        });
         alert("장바구니에 추가 되었습니다.");
       }
     </script>
@@ -129,7 +129,7 @@
       <i class="fa-brands fa-twitter"></i>
     </div>
   </footer>
-    <script src="./computer.js></script>
+   <!-- <script src="./computer.js></script>-->
   <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PP7R6JD"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
